--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -15,12 +15,12 @@
 
 .btn-signup{
     border-radius: 8px;
-    background-color: #ffc107;
+    background-color: 	#d07619;
 }
 
 .btn-login{
     border-radius: 8px;
-    background-color: #008CBA;
+    background-color: #8b1b07;
 }
 
 input{
@@ -32,19 +32,44 @@ input{
     border: 2px solid #f1f1f1;
 }
 
+/* log In */
 .form-container{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    height: 50vh;
+    height: auto;
 }
 
 .form-container > div {
   width: 300px;
-  background-color: #eeeeeb;
+  margin-top: 107px;
+  margin-left: 100px;
+  background-color: #e2a74e;
   padding: 20px;
-  border-radius: 2px;
+  border-radius: 5px;
 }
+
+.form-container > div > h2 {
+    text-align: center;
+    color: white;
+}
+
+.form-container > div > label {
+    color: white;
+}
+
+.form-container-bg{
+    background-image: url("../public/pizza_1.jpg");
+    height: 700px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.wrong-username-password {
+    color: red;
+}
+
+/* log In */
 
 .container-navbar{
     display: flex;
@@ -60,41 +85,6 @@ input{
     background-color: #ffc107;
 }
 
-.today-container{
-    width: 70vw;
-    /* border: 1px solid red; */
-    
-}
-
-.today-container > div {
-    margin-top: 40px;
-    width: 100%;
-    border-radius: 20px;
-    background-color: #2e3347;
-    padding-top: 20px;
-    
-}
-
-.forecast-container{
-    display: flex;
-    width: 30%;
-    justify-content: center;
-    /* border: 1px solid white */
-}
-
-.main-container{
-    display: flex;
-    width: 100%;
-}
-
-.forecast-container > div {
-    margin-top: 40px;
-    padding: 20px;
-    width: 80%;
-    border-radius: 20px;
-    background-color: #2e3347;
-}
-
 .container-navbar{
     margin: 40px;
     padding: 20px;
@@ -104,40 +94,5 @@ input{
     background-color: #2e3347;
 }
 
-.curr-weather-container{
-    display:flex;
-    justify-content: space-between;
-}
 
-.curr-weather-container > div {
-    width: 100%;
-    text-align: center;
-}
 
-.curr-weather-container > div:first-child {
-    text-align: left;
-    font-size: 40px;
-    padding-left: 30px;
-}
-
-.curr-weather-container > div:first-child > span:first-child{
-    padding-bottom: 10px;    
-}
-
-.wrap-content-air-conditions{
-    display: flex;
-}
-
-.wrap-content-today-forecast{
-    display: flex;
-}
-
-.img-main{
-    width: 150px;
-    height: auto;
-}
-
-.img-next-7-days{
-    width: 50px;
-    height: auto;
-}
