update readme, add favorite action

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -184,3 +184,11 @@ nav {
 }
 
 /* end profile */
+
+/* favorite */
+.wrapper-favorite{
+    margin: 0 10px 0 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+/* end favorite */
