--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,16 +1,16 @@
 .btn-cust{
     border: none;
     color: white;
-    padding: 10px;
+    padding: 2px 5px 2px 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 15px;
     font-weight: 600;
-    margin: 4px 2px;
+    margin: 4px 0px;
     cursor: pointer;
     width: 100%;
-    background-color: #2e3347;
+    /* background-color: #2e3347; */
 }
 
 .btn-signup{
@@ -35,15 +35,13 @@ input{
 /* log In */
 .login-container{
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
     height: auto;
 }
 
 .login-container > div {
   width: 300px;
   margin-top: 107px;
-  margin-left: 100px;
   background-color: #e2a74e;
   padding: 20px;
   border-radius: 5px;
@@ -60,7 +58,8 @@ input{
 
 .login-container-bg{
     background-image: url("../public/pizza_1.jpg");
-    height: 700px;
+    width: 100%;
+    height: 1000px;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -73,9 +72,21 @@ input{
     margin-top:10px;
 }
 
-@media only screen and (max-width:600){
+@media only screen and (min-width: 768px) {
+    /* for desktop */
+    .login-container > div {
+        margin-left: 100px;
+    }
+
+    .login-container{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        height: auto;
+    }
+
     .login-container-bg{
-        display: none;
+        height: 700px;
     }
 }
 
@@ -85,14 +96,11 @@ input{
 
 .container-navbar{
     display: flex;
-    justify-content: flex-end;
-    border:1px solid green;
-    /* float:right; */
+    justify-content: center;
+    /* border:1px solid green; */
 }
 
 .container-navbar > div > a {
-    /* margin: 40px; */
-    /* padding: 20px; */
     width: 80%;
     border-radius: 20px;
     height:100%;
@@ -112,6 +120,28 @@ nav {
     flex-direction: row;
 }
 
+.container-navbar > nav > div > a > button {
+    border-right: 3px solid #949d8b;
+}
+
+.btn-active-navbar{
+    background-color: #949d8b;
+    color: white;
+}
+.btn-non-active-navbar{
+    background-color: #e9ebe8;
+    color: black;
+}
+
+@media only screen and (min-width: 768px) {
+    .container-navbar{
+        display: flex;
+        justify-content: flex-end;
+        /* border:1px solid green; */
+        /* float:right; */
+    }
+}
+
 /* end nav bar */
 
 /* card food */
@@ -119,6 +149,7 @@ nav {
     border: 2px solid #d0d7df;
     width: 250px;
     border-radius: 8px;
+    margin: 5px;
 }
 
 .card-img{
@@ -130,12 +161,34 @@ nav {
     background-color: #B5A33F;
     padding: 5px;
     font-size: 14px;
+    margin: 0px 1px 0 6px;
+    width: 95%;
 }
 
 .btn-card-detail{
     background-color: #344332;
     padding: 5px;
     font-size: 14px;
+    margin: 5px 1px 5px 6px;
+    width: 95%;
+}
+
+.title-card{
+    margin: 10px 0 10px 5px;
+    height: 40px;
+}
+
+@media only screen and (min-width: 768px) {
+    .container-navbar{
+        display: flex;
+        justify-content: flex-end;
+        /* border:1px solid green; */
+        /* float:right; */
+    }
+
+    .card-food{
+        width: 200px;
+    }
 }
 /* end card food */
 
@@ -155,16 +208,57 @@ nav {
 
 .search-input-home{
     font-size: 15px;
-    width: 400px;
+    width: 90%;
 }
 
 .container-header-home{
     background-image: url("../public/food_2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    border:1px solid red;
-    height:205px
+    /* border:1px solid red; */
+    height:145px
 }
+
+.result-search-wrapper{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    padding-left: 50px;
+    margin-top: 10px;
+}
+
+.btn-search-home{
+    border: none;
+    color: white;
+    padding: 2px 5px 2px 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 600;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #954a36;
+    height: 30px;
+    width: 60px 
+}
+
+@media only screen and (min-width: 768px) {
+    .search-input-home{
+        width: 400px;
+    }
+
+    .container-header-home{
+        height:205px
+    }
+
+    .result-search-wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: inherit;
+    }
+}
+
 /* end home/dashboard */
 
 /* profile */
@@ -201,4 +295,6 @@ nav {
     display: flex;
     flex-wrap: wrap;
 }
+
+
 /* end favorite */
