--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -293,8 +293,21 @@ nav {
 .wrapper-favorite{
     margin: 0 10px 0 10px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
 }
 
+.title-page-favorite{
+    font-size: 25px;
+    margin: 0 0 10px 10px;
+}
+
+@media only screen and (min-width: 768px) {
+    .wrapper-favorite{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+}
 
 /* end favorite */
